--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,11 @@
 		}
 	],
 	"require": {
-		"php": "^7.2",
+		"php": "^7.2 || ^8.0",
 		"ext-json": "*"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "^8",
+		"phpunit/phpunit": "^9.5",
 		"squizlabs/php_codesniffer": "^3.4"
 	},
 	"support": {
